; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/kerberos/extr_kuhl_m_kerberos_ticket.c_kuhl_m_kerberos_ticket_createSequencePrimaryName.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/kerberos/extr_kuhl_m_kerberos_ticket.c_kuhl_m_kerberos_ticket_createSequencePrimaryName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32*, i32 }

@.str = private unnamed_addr constant [9 x i8] c"{t{i}t{{\00", align 1
@ID_CTX_PRINCIPALNAME_NAME_TYPE = common dso_local global i32 0, align 4
@ID_CTX_PRINCIPALNAME_NAME_STRING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"}}}\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kuhl_m_kerberos_ticket_createSequencePrimaryName(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* %5, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @ID_CTX_PRINCIPALNAME_NAME_TYPE, align 4
  %12 = call i32 @MAKE_CTX_TAG(i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @ID_CTX_PRINCIPALNAME_NAME_STRING, align 4
  %15 = call i32 @MAKE_CTX_TAG(i32 %14)
  %16 = call i32 (i32*, i8*, ...) @ber_printf(i32* %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %13, i32 %15)
  store i64 0, i64* %6, align 8
  br label %17

17:                                               ; preds = %31, %2
  %18 = load i64, i64* %6, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ult i64 %18, %21
  br i1 %22, label %23, label %34

23:                                               ; preds = %17
  %24 = load i32*, i32** %3, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = load i64, i64* %6, align 8
  %29 = getelementptr inbounds i32, i32* %27, i64 %28
  %30 = call i32 @kull_m_asn1_GenString(i32* %24, i32* %29)
  br label %31

31:                                               ; preds = %23
  %32 = load i64, i64* %6, align 8
  %33 = add i64 %32, 1
  store i64 %33, i64* %6, align 8
  br label %17

34:                                               ; preds = %17
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 (i32*, i8*, ...) @ber_printf(i32* %35, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ber_printf(i32*, i8*, ...) #1

declare dso_local i32 @MAKE_CTX_TAG(i32) #1

declare dso_local i32 @kull_m_asn1_GenString(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
